Prevent overflow stuck buttons

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -606,7 +606,7 @@ div.save {
   }
 }
 #buttons.stuck .buttons button {
-  min-height: 7em;
+  height: 7em;
 }
 .svgButton.shuffle.stuck {
   margin-top: 7.5em;
